tests/misc_errors/continue_break.out
error: continue_break.li 2,3: `break` is not in a loop
    2 |   break
      |   ^^^^^
error: continue_break.li 3,3: `continue` is not in a loop
    3 |   continue
      |   ^^^^^^^^
